--- a/styles/style_index.css
+++ b/styles/style_index.css
@@ -267,16 +267,37 @@
     -webkit-filter: blur(0px);
     filter: blur(0px);
     opacity: 1; } }
-.cierreonhover:hover {
-  -webkit-animation: cierreonhover 1s cubic-bezier(0.39, 0.575, 0.565, 1) both;
-  animation: cierreonhover 1s cubic-bezier(0.39, 0.575, 0.565, 1) both; }
+.videoOpacity {
+  -webkit-animation: videoOpacity 5s cubic-bezier(0.47, 0, 0.745, 0.715) infinite;
+  animation: videoOpacity 5s cubic-bezier(0.47, 0, 0.745, 0.715) infinite; }
+  .videoOpacity:hover {
+    -webkit-animation: videoOpacity_hover 0.7s cubic-bezier(0.39, 0.575, 0.565, 1) both;
+    animation: videoOpacity_hover 0.7s cubic-bezier(0.39, 0.575, 0.565, 1) both; }
 
-@-webkit-keyframes cierreonhover {
+@-webkit-keyframes videoOpacity {
+  0% {
+    opacity: 0; }
+  25% {
+    opacity: 0.5; }
+  50% {
+    opacity: 0; }
+  100% {
+    opacity: 0; } }
+@keyframes videoOpacity {
+  0% {
+    opacity: 0; }
+  25% {
+    opacity: 0.5; }
+  50% {
+    opacity: 0; }
+  100% {
+    opacity: 0; } }
+@-webkit-keyframes videoOpacity_hover {
   0% {
     opacity: 0; }
   100% {
     opacity: 0.5; } }
-@keyframes cierreonhover {
+@keyframes videoOpacity_hover {
   0% {
     opacity: 0; }
   100% {
@@ -549,7 +570,8 @@ footer {
   width: 100%;
   flex-direction: column;
   align-items: center;
-  display: none; }
+  display: none;
+  overflow: hidden; }
 
 .presentacion_contenedor {
   height: 85vh;
@@ -633,25 +655,25 @@ footer {
         border-radius: 15px;
         width: 80vw;
         -webkit-box-shadow: 0 0 20px 0px rgba(0, 0, 0, 0.35);
-        box-shadow: 0 0 20px 0px rgba(0, 0, 0, 0.35);
-        overflow: hidden; }
-        .proyectos_contenedor .proyectocontenedor .contenidoproyecto .contenedorgifproyecto .cierreonhover {
+        box-shadow: 0 0 20px 0px rgba(0, 0, 0, 0.35); }
+        .proyectos_contenedor .proyectocontenedor .contenidoproyecto .contenedorgifproyecto .videoOpacity {
           position: absolute;
-          display: flex;
+          display: none;
           align-items: center;
           justify-content: center;
           opacity: 0;
           height: 100%;
           width: 100%;
-          height: fit-content;
-          background-color: #1e1e1e; }
-          .proyectos_contenedor .proyectocontenedor .contenidoproyecto .contenedorgifproyecto .cierreonhover .fa-play {
+          background-color: #1e1e1e;
+          border-radius: 15px; }
+          .proyectos_contenedor .proyectocontenedor .contenidoproyecto .contenedorgifproyecto .videoOpacity .fa-play {
             opacity: 0.5;
             color: #fffaec;
             font-size: 3em; }
         .proyectos_contenedor .proyectocontenedor .contenidoproyecto .contenedorgifproyecto .preview {
           height: 100%;
-          width: 100%; }
+          width: 100%;
+          border-radius: 15px; }
       .proyectos_contenedor .proyectocontenedor .contenidoproyecto .tecnologiasutilizadas {
         width: 95%;
         border-top: 2px solid #1e1e1e;
